Change entities relation structure